--- a/MemeTest/Base.lproj/Main.storyboard
+++ b/MemeTest/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="OTz-2B-IU7">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -7,6 +7,154 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Item-->
+        <scene sceneID="oaT-QZ-e2F">
+            <objects>
+                <navigationController id="FXJ-M4-dIM" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="MTc-Tb-938"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="w7Z-4R-079">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="UXa-wr-BpY" kind="relationship" relationship="rootViewController" id="G9Y-bM-dpD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LDU-1h-f39" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-404" y="-434"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Spc-R6-lgp">
+            <objects>
+                <navigationController id="4Ea-ak-Z7u" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="XEr-ff-P8C"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xOg-Tf-dt6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="DMX-hg-sas" kind="relationship" relationship="rootViewController" id="5fr-l0-6aw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ft2-DK-VJB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-404" y="-1081"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="5wn-40-WNa">
+            <objects>
+                <tableViewController id="DMX-hg-sas" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="AG8-3o-seB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SentMemesTableViewCell" id="VWD-YQ-Wxd">
+                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VWD-YQ-Wxd" id="Fpx-qT-xR6">
+                                    <frame key="frameInset" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="DMX-hg-sas" id="0vI-gq-Sbv"/>
+                            <outlet property="delegate" destination="DMX-hg-sas" id="bVn-dg-ldT"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="9H8-yh-UEH"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UPp-9T-CC2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="420" y="-1091"/>
+        </scene>
+        <!--Sent Memes Collection View Controller-->
+        <scene sceneID="S2Z-ba-RaW">
+            <objects>
+                <collectionViewController id="UXa-wr-BpY" customClass="SentMemesCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="RAC-iH-To3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tlR-oC-Gsy">
+                            <size key="itemSize" width="135" height="120"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SentMemesCollectionViewCell" id="5I6-Lx-eCn" customClass="SentMemesCollectionViewCell" customModule="MemeMe_1_0" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="135" height="120"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="135" height="120"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zGa-ZR-d1b">
+                                            <frame key="frameInset" minX="-32" width="240" height="128"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <connections>
+                                    <outlet property="savedMemeImageView" destination="zGa-ZR-d1b" id="16i-6H-bzS"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="UXa-wr-BpY" id="ObY-nk-rRT"/>
+                            <outlet property="delegate" destination="UXa-wr-BpY" id="20s-tu-sMs"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="yR5-A2-3li">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="kGU-fe-xKd">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="uCx-1e-Wah"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qhz-Ed-M4h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="420" y="-434.03298350824593"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="M8u-cG-xXe">
+            <objects>
+                <tabBarController id="OTz-2B-IU7" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="axq-XW-dfc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="4Ea-ak-Z7u" kind="relationship" relationship="viewControllers" id="Xoj-W7-2dz"/>
+                        <segue destination="FXJ-M4-dIM" kind="relationship" relationship="viewControllers" id="m7F-vG-7WK"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7nf-Li-4uK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1313" y="-762"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fFJ-iO-AAe">
+            <objects>
+                <navigationController id="TQg-7L-v4i" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="98A-v0-O3S"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sxe-FV-ZTI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="3kY-FC-SNs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5T5-Vs-YS7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-404" y="278"/>
+        </scene>
         <!--Meme View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -97,6 +245,7 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="kvU-3G-Vgc"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="activityButton" destination="5Ix-PF-QIh" id="FqG-DX-BEU"/>
@@ -110,7 +259,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="786" y="587"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="uCx-1e-Wah"/>
+    </inferredMetricsTieBreakers>
 </document>
